--- a/index.html
+++ b/index.html
@@ -70,5 +70,9 @@
     </form>
     <button type="submit" id =''></button>
     <hr/>
+   
+    <footer>
+        <p> author : George folakemi <br/>
+        <a href='mailto Georgefolakemi'> georgeolumorotifolakemi5@gmail.com</a></p>
 </body>
 </html>
